<resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/com_auth0_lock_social_*">
    <string name="com_auth0_lock_social_error_authentication">Error parsing Authentication data</string>
    <string name="com_auth0_lock_social_unknown_placeholder">LOG IN WITH %s</string>
    <string name="com_auth0_lock_social_yahoo">LOG IN WITH YAHOO!</string>
    <string name="com_auth0_lock_social_linkedin">LOG IN WITH LINKEDIN</string>
    <string name="com_auth0_lock_social_google_oauth2">LOG IN WITH GOOGLE</string>
    <string name="com_auth0_lock_social_twitter">LOG IN WITH TWITTER</string>
    <string name="com_auth0_lock_social_facebook">LOG IN WITH FACEBOOK</string>
    <string name="com_auth0_lock_social_amazon">LOG IN WITH AMAZON</string>
    <string name="com_auth0_lock_social_aol">LOG IN WITH AOL</string>
    <string name="com_auth0_lock_social_box">LOG IN WITH BOX</string>
    <string name="com_auth0_lock_social_evernote">LOG IN WITH EVERNOTE</string>
    <string name="com_auth0_lock_social_evernote_sandbox">LOG IN WITH EVERNOTE (SANDBOX)</string>
    <string name="com_auth0_lock_social_exact">LOG IN WITH EXACT</string>
    <string name="com_auth0_lock_social_github">LOG IN WITH GITHUB</string>
    <string name="com_auth0_lock_social_instagram">LOG IN WITH INSTAGRAM</string>
    <string name="com_auth0_lock_social_miicard">LOG IN WITH MIICARD</string>
    <string name="com_auth0_lock_social_paypal">LOG IN WITH PAYPAL</string>
    <string name="com_auth0_lock_social_salesforce">LOG IN WITH SALESFORCE</string>
    <string name="com_auth0_lock_social_salesforce_community">LOG IN WITH SALESFORCE (COMMUNITY)</string>
    <string name="com_auth0_lock_social_salesforce_sandbox">LOG IN WITH SALESFORCE (SANDBOX)</string>
    <string name="com_auth0_lock_social_soundcloud">LOG IN WITH SOUNDCLOUD</string>
    <string name="com_auth0_lock_social_windowslive">LOG IN WITH MICROSOFT</string>
    <string name="com_auth0_lock_social_yammer">LOG IN WITH YAMMER</string>
    <string name="com_auth0_lock_social_baidu">LOG IN WITH 百度</string>
    <string name="com_auth0_lock_social_fitbit">LOG IN WITH FITBIT</string>
    <string name="com_auth0_lock_social_planningcenter">LOG IN WITH PLANNING CENTER</string>
    <string name="com_auth0_lock_social_renren">LOG IN WITH 人人</string>
    <string name="com_auth0_lock_social_thecity">LOG IN WITH THE CITY</string>
    <string name="com_auth0_lock_social_thecity_sandbox">LOG IN WITH THE CITY (SANDBOX)</string>
    <string name="com_auth0_lock_social_thirtysevensignals">LOG IN WITH 37 SIGNALS</string>
    <string name="com_auth0_lock_social_vkontakte">LOG IN WITH VKONTAKTE</string>
    <string name="com_auth0_lock_social_weibo">LOG IN WITH 新浪微博</string>
    <string name="com_auth0_lock_social_wordpress">LOG IN WITH WORDPRESS</string>
    <string name="com_auth0_lock_social_yandex">LOG IN WITH YANDEX</string>
    <string name="com_auth0_lock_social_shopify">LOG IN WITH SHOPIFY</string>
    <string name="com_auth0_lock_social_dwolla">LOG IN WITH DWOLLA</string>
    <string name="com_auth0_lock_social_icon_yahoo">Y</string>
    <string name="com_auth0_lock_social_icon_linkedin">L</string>
    <string name="com_auth0_lock_social_icon_google_oauth2">+</string>
    <string name="com_auth0_lock_social_icon_twitter">T</string>
    <string name="com_auth0_lock_social_icon_facebook">f</string>
    <string name="com_auth0_lock_social_icon_amazon">a</string>
    <string name="com_auth0_lock_social_icon_aol">l</string>
    <string name="com_auth0_lock_social_icon_box">x</string>
    <string name="com_auth0_lock_social_icon_evernote">n</string>
    <string name="com_auth0_lock_social_icon_evernote_sandbox">n</string>
    <string name="com_auth0_lock_social_icon_github">è</string>
    <string name="com_auth0_lock_social_icon_instagram">i</string>
    <string name="com_auth0_lock_social_icon_miicard">m</string>
    <string name="com_auth0_lock_social_icon_paypal">$</string>
    <string name="com_auth0_lock_social_icon_salesforce">*</string>
    <string name="com_auth0_lock_social_icon_salesforce_sandbox">*</string>
    <string name="com_auth0_lock_social_icon_soundcloud">t</string>
    <string name="com_auth0_lock_social_icon_windowslive">W</string>
    <string name="com_auth0_lock_social_icon_yammer">!</string>
    <string name="com_auth0_lock_social_icon_baidu">u</string>
    <string name="com_auth0_lock_social_icon_fitbit">#</string>
    <string name="com_auth0_lock_social_icon_planningcenter">y</string>
    <string name="com_auth0_lock_social_icon_renren">r</string>
    <string name="com_auth0_lock_social_icon_thecity">c</string>
    <string name="com_auth0_lock_social_icon_thecity_sandbox">c</string>
    <string name="com_auth0_lock_social_icon_thirtysevensignals">b</string>
    <string name="com_auth0_lock_social_icon_vkontakte">N</string>
    <string name="com_auth0_lock_social_icon_weibo">S</string>
    <string name="com_auth0_lock_social_icon_wordpress">w</string>
    <string name="com_auth0_lock_social_icon_yandex">&amp;</string>
    <string name="com_auth0_lock_social_icon_shopify">s</string>
    <string name="com_auth0_lock_social_icon_dwolla">D</string>
    <string name="com_auth0_lock_default_country_name_fallback">US</string>
    <string name="com_auth0_lock_default_country_code_fallback">+1</string>
    <string name="com_auth0_lock_header_title">Auth0</string>
    <string name="com_auth0_lock_network_error">Network error</string>
    <string name="com_auth0_lock_input_error_email">Invalid Email Address</string>
    <string name="com_auth0_lock_input_error_password">Invalid Password</string>
    <string name="com_auth0_lock_input_error_username_email">Invalid Username or Email Address</string>
    <string name="com_auth0_lock_input_error_username">Invalid Username. Can only contain between 1 to 15 alphanumeric characters and \'_\'.</string>
    <string name="com_auth0_lock_input_error_code">Invalid Code</string>
    <string name="com_auth0_lock_input_error_phone_number">Invalid Phone Number</string>
    <string name="com_auth0_lock_input_error_date">Invalid Date</string>
    <string name="com_auth0_lock_input_error_empty">The value cannot be empty</string>
    <string name="com_auth0_lock_hint_email">Email</string>
    <string name="com_auth0_lock_hint_password">Password</string>
    <string name="com_auth0_lock_hint_username">Username</string>
    <string name="com_auth0_lock_hint_username_or_email">Username/Email</string>
    <string name="com_auth0_lock_hint_code">Code</string>
    <string name="com_auth0_lock_hint_mfa_code">Verification Code</string>
    <string name="com_auth0_lock_hint_phone_number">Phone Number</string>
    <string name="com_auth0_lock_hint_search_country">Search your country</string>
    <string name="com_auth0_lock_action_sign_up">Sign Up</string>
    <string name="com_auth0_lock_action_log_in">Log In</string>
    <string name="com_auth0_lock_action_forgot_password">Don\'t remember your password?</string>
    <string name="com_auth0_lock_action_login_with_corporate">Please enter your corporate credentials at %s</string>
    <string name="com_auth0_lock_action_retry">Retry</string>
    <string name="com_auth0_lock_single_sign_on_enabled">Single Sign On Enabled</string>
    <string name="com_auth0_lock_forms_separator">OR</string>
    <string name="com_auth0_lock_passwordless_sms_forms_separator">Otherwise, enter your phone to sign in or create an account</string>
    <string name="com_auth0_lock_passwordless_email_forms_separator">Otherwise, enter your email to sign in or create an account</string>
    <string name="com_auth0_lock_title_change_password">Reset Password</string>
    <string name="com_auth0_lock_title_sign_up_custom_fields">Complete the sign up process</string>
    <string name="com_auth0_lock_description_change_password">Please enter your email and the new\n password. We will send you an email to\n confirm the password change.</string>
    <string name="com_auth0_lock_title_passwordless_code_email_sent">An email with the code has been sent to %s</string>
    <string name="com_auth0_lock_title_passwordless_code_sms_sent">An SMS with the code has been sent to %s</string>
    <string name="com_auth0_lock_title_passwordless_link_sent">We sent you a link to sign in to\n %s</string>
    <string name="com_auth0_lock_title_passwordless_code_retry">Did not get the code?</string>
    <string name="com_auth0_lock_title_passwordless_got_code">I have a code</string>
    <string name="com_auth0_lock_title_social_progress_dialog">Logging in</string>
    <string name="com_auth0_lock_message_social_progress_dialog">Logging in to Auth0</string>
    <string name="com_auth0_lock_sign_up_terms">By signing up, you agree to our terms of\n service and privacy policy</string>
    <string name="com_auth0_lock_title_passwordless_email">Enter your email address to sign in\n or create an account</string>
    <string name="com_auth0_lock_title_passwordless_sms">Enter your phone to sign in\n or create an account</string>
    <string name="com_auth0_lock_sign_up_terms_dialog_title">Terms &amp; Policy</string>
    <string name="com_auth0_lock_sign_up_terms_dialog_message" formatted="false"><![CDATA[
    By signing up, you agree to our <a href=\'%s\'>terms of service</a> and <a href=\'%s\'>privacy policy</a>
    ]]></string>
    <string name="com_auth0_lock_missing_connections_message">There isn\'t any connection configured for this Application. Check your dashboard configuration on http://auth0.com</string>
    <string name="com_auth0_lock_configuration_retrieving_error">Error retrieving the Dashboard configuration</string>
    <string name="com_auth0_lock_enterprise_no_connection_message">There was no connection configured for the domain</string>
    <string name="com_auth0_lock_db_login_error_message">There was an error processing the sign in</string>
    <string name="com_auth0_lock_db_login_error_invalid_credentials_message">Wrong email or password</string>
    <string name="com_auth0_lock_db_login_error_unauthorized_message">User is blocked</string>
    <string name="com_auth0_lock_db_sign_up_error_message">There was an error processing the sign up</string>
    <string name="com_auth0_lock_db_change_password_message_success">We\'ve just sent you an email to reset your password</string>
    <string name="com_auth0_lock_db_message_change_password_error">Couldn\'t reset your password.</string>
    <string name="com_auth0_lock_db_signup_user_already_exists_error_message">The user already exists</string>
    <string name="com_auth0_lock_db_signup_password_already_used_error_message">The password was used previously</string>
    <string name="com_auth0_lock_db_signup_password_not_strong_error_message">The password is not strong enough</string>
    <string name="com_auth0_lock_db_too_many_attempts_error_message">Your account has been blocked after multiple consecutive login attempts.</string>
    <string name="com_auth0_lock_passwordless_code_request_error_message">There was an error sending the code</string>
    <string name="com_auth0_lock_password_strength_identical_chars">No more than 2 identical characters in a row (e.g., "111" not allowed)</string>
    <string name="com_auth0_lock_password_strength_chars_length" formatted="false">At least %d characters in length</string>
    <string name="com_auth0_lock_password_strength_lowercase_letters">Lower case letters (a-z)</string>
    <string name="com_auth0_lock_password_strength_uppercase_letters">Upper case letters (A-Z)</string>
    <string name="com_auth0_lock_password_strength_numbers">Numbers (i.e. 0–9)</string>
    <string name="com_auth0_lock_password_strength_special_chars">Special characters (e.g. !@#$%^&amp;* )</string>
    <string name="com_auth0_lock_password_strength_title_at_least">And contain at least 3 of the following 4 types of characters:</string>
    <string name="com_auth0_lock_password_strength_title_must_have">Must have:</string>
</resources>