<?xml version="1.0" encoding="utf-8"?><!--
  ~ com_auth0_lock_password_strength.xmlength.xml
  ~
  ~ Copyright (c) 2016 Auth0 (http://auth0.com)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/com_auth0_lock_widget_vertical_margin_field"
    android:layout_marginTop="@dimen/com_auth0_lock_widget_vertical_margin_password_strength"
    android:orientation="vertical">

    <TextView
        android:id="@+id/com_auth0_lock_password_strength_title_must_have"
        style="@style/Lock.Theme.Text.PasswordPolicy"
        android:text="@string/com_auth0_lock_password_strength_title_must_have" />

    <com.auth0.android.lock.views.CheckableOptionView
        android:id="@+id/com_auth0_lock_password_strength_option_length"
        style="@style/Lock.Theme.Text.PasswordPolicy"
        android:text="@string/com_auth0_lock_password_strength_chars_length" />

    <com.auth0.android.lock.views.CheckableOptionView
        android:id="@+id/com_auth0_lock_password_strength_option_identical_characters"
        style="@style/Lock.Theme.Text.PasswordPolicy"
        android:text="@string/com_auth0_lock_password_strength_identical_chars" />

    <TextView
        android:id="@+id/com_auth0_lock_password_strength_title_at_least"
        style="@style/Lock.Theme.Text.PasswordPolicy"
        android:layout_marginTop="@dimen/com_auth0_lock_widget_vertical_margin_field"
        android:text="@string/com_auth0_lock_password_strength_title_at_least" />

    <com.auth0.android.lock.views.CheckableOptionView
        android:id="@+id/com_auth0_lock_password_strength_option_lowercase"
        style="@style/Lock.Theme.Text.PasswordPolicy"
        android:text="@string/com_auth0_lock_password_strength_lowercase_letters" />

    <com.auth0.android.lock.views.CheckableOptionView
        android:id="@+id/com_auth0_lock_password_strength_option_uppercase"
        style="@style/Lock.Theme.Text.PasswordPolicy"
        android:text="@string/com_auth0_lock_password_strength_uppercase_letters" />

    <com.auth0.android.lock.views.CheckableOptionView
        android:id="@+id/com_auth0_lock_password_strength_option_numeric"
        style="@style/Lock.Theme.Text.PasswordPolicy"
        android:text="@string/com_auth0_lock_password_strength_numbers" />

    <com.auth0.android.lock.views.CheckableOptionView
        android:id="@+id/com_auth0_lock_password_strength_option_special_characters"
        style="@style/Lock.Theme.Text.PasswordPolicy"
        android:text="@string/com_auth0_lock_password_strength_special_chars" />
</LinearLayout>
