<?xml version="1.0" encoding="utf-8"?><!--
  ~ com_auth0_lock_activity_lock_passwordless.xml
  ~
  ~ Copyright (c) 2016 Auth0 (http://auth0.com)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/com_auth0_lock_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/com_auth0_lock_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true" />

    <com.auth0.android.lock.views.LineSpacingTextView
        android:id="@+id/com_auth0_lock_result_message"
        style="@style/Lock.Theme.Text.ResultMessage"
        android:visibility="gone"
        tools:background="@color/com_auth0_lock_result_message_error_background"
        tools:text="There was an error"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/com_auth0_lock_link_sent_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:background="@null"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/com_auth0_lock_widget_vertical_margin_passwordless_sent"
            android:src="@drawable/com_auth0_lock_link_sent" />

        <com.auth0.android.lock.views.LineSpacingTextView
            android:id="@+id/com_auth0_lock_passwordless_message"
            style="@style/Lock.Theme.Text.LinkSent"
            android:text="@string/com_auth0_lock_title_passwordless_link_sent" />

        <TextView
            android:id="@+id/com_auth0_lock_got_code"
            style="@style/Lock.Theme.Text.Link"
            android:text="@string/com_auth0_lock_title_passwordless_got_code" />

        <TextView
            android:id="@+id/com_auth0_lock_resend"
            style="@style/Lock.Theme.Text.Link"
            android:text="@string/com_auth0_lock_title_passwordless_code_retry"
            android:visibility="invisible"
            tools:visibility="visible" />

    </LinearLayout>
</RelativeLayout>